<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:id="@+id/loginConstraintLayout"
                                             tools:context="com.socialteinc.socialate.LoginActivity">


    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/loginEmailTextInputLayout" tools:ignore="MissingConstraints"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/loginPasswordTextInputLayout">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress|textPersonName"
                android:id="@+id/email_field" android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryText"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginPasswordTextInputLayout"
            android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toTopOf="@+id/SinginButton">


        <EditText
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:hint="@string/password"
                android:id="@+id/password_field" android:inputType="textPassword"
                android:textColor="@color/colorPrimaryText"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:text="@string/login"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorPrimaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/SinginButton" android:onClick="signIn"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/orTextView" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:textSize="30sp" app:layout_constraintHorizontal_bias="0.502"
            android:text="@string/socialate" android:id="@+id/appNameTextView" android:textColor="@color/colorPrimaryText"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/loginEmailTextInputLayout"/>

    <TextView
        android:id="@+id/orTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/com_facebook_smart_device_instructions_or"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/facebookButton"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebookButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="11dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/googleButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/linearLayout1" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
    >
        <TextView
                android:text="@string/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/resetPasswordTextView"
                android:textSize="18sp"
                android:layout_weight="0.05" android:onClick="resetPassword"/>
        <TextView
                android:text="@string/need_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/creatAccountTextView"
                android:textSize="18sp" android:textAlignment="textEnd" android:layout_weight="0.08"
                android:onClick="signUp"/>
    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical|center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout1" />


</android.support.constraint.ConstraintLayout>