...
    <string name="display">Display Name</string>
    <string name="name_nsfvvashfhjgafjag">Name NSFVVASHFHJGAFJAG</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="action_search">Search</string>
    <string name="app_label">Socialate</string>
    <string name="search_hint">Search for a spot</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="search_desc">search option</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="multiautocompletetextview_ajfgajhgfjgahdfg">MultiAutoCompleteTextView ajfgajhgfjgahdfg</string>
    <string name="musa_rikhotso">Musa Rikhotso</string>
    <string name="musa_rikhotso1">Musa Rikhotso</string>
    <string name="_2017_08_20_14_00pm">2017-08-20 14:00pm</string>
    <string name="_2">2</string>
...
