<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/search_acivity"
        tools:context="com.socialteinc.socialate.SearchableActivity">


    <include
            layout="@layout/app_bar_layout"
            android:id="@+id/mainPageToolBar" app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content" android:layout_width="0dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:scrollbars="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainPageToolBar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp" />

</android.support.constraint.ConstraintLayout>
